# sncf-project

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_exploration_api_sncf.ipynb  02_gmail.ipynb
src/: authenticate_gmail.py  authenticate_gsheet.py  email_list.py  gmail.py  main.py  sheet_emails.py  sncf.py  stations.py
